--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,10 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+    .link {
+        @apply hover:underline text-blue-600 hover:text-blue-800
+    }
+}
+
 .menu-btn {
-    @apply text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium;
+    @apply text-gray-300 hover:bg-red-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium;
 }
 
 .menu-btn-active {
-    @apply bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium;
+    @apply bg-red-900 text-white px-3 py-2 rounded-md text-sm font-medium;
 }
